Add sioux cover letter

--- a/khl/coverletter/coverletter-ortec.tex
+++ b/khl/coverletter/coverletter-ortec.tex
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Picnic}
-  {Amsterdam, North Holland, Netherlands}
+  {Ortec Finance}
+  {The Randstad, Netherlands}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Warehouse Simulation Software Engineer}
+\lettertitle{Job Application for Software Engineer}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,17 +122,17 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my enthusiastic interest in the "Warehouse Simulation Software Engineer" position at Picnic. As a dedicated researcher who has spent the majority of my career working in simulation, I am excited to seize the opportunity to apply my expertise to real-world business challenges through this role.
+I am writing to express my enthusiastic interest in the "Software Engineer" position at Ortec Finance. With a background as a software developer and a researcher, I am excited about the opportunity to work on challenging software projects in the financial industry.
 
-My journey commenced in the field of physics, where I constructed simulation models for celestial objects, including black holes. This experience not only fortified my proficiency in building intricate models but also equipped me with the ability to calibrate and statistically validate these models using Python. Building upon this foundation, my PhD research embarked on a unique trajectory as I seamlessly integrated my expertise in computational social science. My focus shifted to crafting human-centric models, employing a spectrum of methodologies such as game theory, agent-based simulation, Bayesian networks, and reinforcement learning. I adeptly implemented these models across various programming languages, including Java, Python, and Julia. Furthermore, I gained hands-on experience in validating these models using data stored in SQL databases, refining my skills as a simulation software engineer.
+My academic journey has been a unique blend of physics, astrophysics, and computational social science, which has equipped me with a strong foundation in problem-solving and analytical thinking. Throughout my studies, I have gained proficiency in a wide range of programming languages, including C, Java, Python, SQL, and experience working with Linux systems and simulations. To further challenge myself, I crafted a sophisticated agent-based simulation framework and developed a game using Kotlin, designed with proper design patterns, comprehensive unit/integration tests, and thorough documentation, exemplifies my competence as a developer.
 
-To continually challenge myself, I dedicated significant effort to create a sophisticated simulation framework and a game using Kotlin. This framework serves as the cornerstone for simulating interstellar societies, wherein the temporal delays imposed by relativistic physics hold profound implications — much like the diverse time delays prevalent in real-world signals. My framework adheres to best practices, incorporates comprehensive unit and integration testing, and boasts detailed documentation. This project serves as a testament to my proficiency as a creative researcher and a capable software engineer.
+In parallel with my academic pursuits, I have actively contributed to open-source projects, transforming me from a scientific programmer into a well-rounded software engineer. One standout example of my commitment to software excellence is my KSerGen library, created after my discovery of KSP at KotlinConf 2023. This library automates the generation of immutable data classes and serialization hierarchies, significantly reducing boilerplate code in my Kotlin games. This streamlined development process has led to a substantial reduction in development time and improved code quality. 
 
-Concurrently with my academic pursuits, I have actively contributed to open-source projects. These experiences have broadened my skill set, propelling me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to the pursuit of excellence in software development and underscores my adaptability in the face of new challenges.
+Beyond my technical proficiency, my experiences during my PhD have equipped me with valuable skills in collaborating with individuals from diverse backgrounds and nationalities, underscoring my ability to work effectively within a team. I am confident that I can integrate seamlessly into your team and contribute to the success of Ortec Finance.
 
-While my prior experience may not directly align with warehouse simulations, I am confident in my ability to contribute significantly to modeling human behavior within warehouse environments. I am fully prepared to bridge any knowledge gaps, including those related to cloud computing technologies.
+Thank you for considering my application. I am eagerly looking forward to the opportunity to discuss how my experiences align with the requirements of the role in greater detail.
 
-I am eagerly anticipating the opportunity to join your team and make a meaningful impact. Thank you for considering my application.
+%\lettersection{Why Me?}
 
 \end{cvletter}
 
