--- a/khl/coverletter/coverletter-sioux.tex
+++ b/khl/coverletter/coverletter-sioux.tex
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Autodesk}
-  {Birmingham, GBR}
+  {Sioux Technologies}
+  {Eindhoven}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Graduate Software Engineer}
+\lettertitle{Job Application for Mathware Engineer}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,18 +122,17 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
+I am writing to express my enthusiastic interest in the "Mathware Engineer position" position at Sioux Technologies. As a dedicated researcher who has spent the majority of my career working in simulation, I am excited to seize the opportunity to apply my expertise to real-world business challenges through this role.
 
-I am writing to express my strong interest in the R\&D Engineer II position at ANSYS, as advertised on your company's website. With a background as a physicist working extensively in software development and a strong passion for pushing the boundaries of technology, I am excited about the prospect of contributing my skills to ANSYS's innovative projects.
+My journey commenced in the field of physics, where I constructed simulation models for celestial objects, including black holes. This experience not only fortified my proficiency in building intricate models but also equipped me with the ability to calibrate and statistically validate these models using Python. Building upon this foundation, my PhD research embarked on a unique trajectory as I seamlessly integrated my expertise in computational social science. My focus shifted to crafting human-centric models, employing a spectrum of methodologies such as game theory, agent-based simulation, Bayesian networks, and reinforcement learning. I adeptly implemented these models across various programming languages, including Java, Python, and Julia. Furthermore, I gained hands-on experience in validating these models using data stored in SQL databases, refining my skills as a simulation software engineer.
 
-My journey began in the realm of physics, where I gained proficiency in a range of technical areas, including C, Python, Linux systems, supercomputing, and simulations. These skills have prepared me well for the role of a research software engineer, equipping me to take on complex technical challenges with confidence. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise in the world of quantitative social sciences. During this time, I directed my efforts towards creating a sophisticated simulation framework and a game using Kotlin, tailored to study interstellar societies while considering relativistic physics — an endeavor that speaks to my ability to tackle intricate subject matter.
+To continually challenge myself, I dedicated significant effort to create a sophisticated simulation framework and a game using Kotlin. This framework serves as the cornerstone for simulating interstellar societies, wherein the temporal delays imposed by relativistic physics hold profound implications — much like the diverse time delays prevalent in real-world signals. My framework adheres to best practices, incorporates comprehensive unit and integration testing, and boasts detailed documentation. This project serves as a testament to my proficiency as a creative researcher and a capable software engineer.
 
-I am particularly proud of my accomplishments in designing and implementing this simulation framework. While Kotlin may not be the most performant choice, I invested significant effort in optimizing data structures and algorithms to ensure efficient execution and parallelizability. This project exemplifies my dedication to achieving high performance through meticulous software engineering.
+Concurrently with my academic pursuits, I have actively contributed to open-source projects. These experiences have broadened my skill set, propelling me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to the pursuit of excellence in software development and underscores my adaptability in the face of new challenges.
 
-Parallel to my academic pursuits, I have actively engaged with open-source projects, focusing predominantly on C++. These experiences have broadened my skill set, elevating me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to excellence in software development and my readiness to adapt to new challenges.
+Throughout my academic journey, I have thrived in diverse, cross-cultural collaborations, honing my teamwork and communication skills. I have also taken the initiative to organize workshops and actively participate in events to promote open science, open-source principles, and FAIR data practices. These experiences have equipped me to excel in collaborative environments and contribute effectively to cross-functional teams.
 
-Although my academic path has led me into an interdisciplinary field that is not strictly science/computer science, I believe that my ability to quickly grasp and master new technical concepts, combined with my proficiency in collaboration, makes me a strong candidate for the R\&D Engineer position. The experience gained from working in diverse teams during my PhD research further bolsters my aptitude as a collaborative team player, an essential quality for success in ANSYS's dynamic environment.
-
-As a Hong Kong citizen currently residing in the Netherlands, I am excited about the possibility of relocating to Canada under the open work permit policy. Thank you for considering my application. I am enthusiastic about the prospect of joining ANSYS and contributing my unique blend of skills and experiences to the team. I look forward to the opportunity for further discussion in an interview setting.
+I am eagerly anticipating the opportunity to join your team and make a meaningful impact. Thank you for considering my application.
 
 %\lettersection{Why Me?}
 
