Add cv-gov.tex, fix compilation

--- a/khl/cv/cv-full.tex
+++ b/khl/cv/cv-full.tex
@@ -88,8 +88,8 @@
 %-------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %-------------------------------------------------------------------------------
-\addbibresource{cv/my-representative-publication.bib}
-\addbibresource{cv/ligo-scientific-collaboration.bib}
+\addbibresource{contents/my-representative-publication.bib}
+\addbibresource{contents/ligo-scientific-collaboration.bib}
 
 
 %-------------------------------------------------------------------------------
@@ -111,18 +111,18 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{cv/education.tex}
-\input{cv/experience.tex}
-\input{cv/projects.tex}
-\input{cv/skills.tex}
-\input{cv/selected-academic-publications.tex}
-\input{cv/presentations.tex}
-\input{cv/honors-and-awards.tex}
-\input{cv/committees.tex}
-\input{cv/other-academic-publications.tex}
-%\input{cv/experience.tex}
-%\input{cv/extracurricular.tex}
-%\input{cv/writing.tex}
+\input{contents/education.tex}
+\input{contents/experience.tex}
+\input{contents/projects.tex}
+\input{contents/skills.tex}
+\input{contents/selected-academic-publications.tex}
+\input{contents/presentations.tex}
+\input{contents/honors-and-awards.tex}
+\input{contents/committees.tex}
+\input{contents/other-academic-publications.tex}
+%\input{contents/experience.tex}
+%\input{contents/extracurricular.tex}
+%\input{contents/writing.tex}
 
 
 %-------------------------------------------------------------------------------
