--- a/khl/cv/cv-soft.tex
+++ b/khl/cv/cv-soft.tex
@@ -88,8 +88,8 @@
 %-------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %-------------------------------------------------------------------------------
-\addbibresource{cv/my-representative-publication.bib}
-\addbibresource{cv/ligo-scientific-collaboration.bib}
+\addbibresource{contents/my-representative-publication.bib}
+\addbibresource{contents/ligo-scientific-collaboration.bib}
 
 
 %-------------------------------------------------------------------------------
@@ -113,18 +113,18 @@ Enthusiastic researcher and software developer with a strong background in physi
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{cv/education.tex}
-\input{cv/experience-soft.tex}
-\input{cv/projects-soft.tex}
-\input{cv/skills.tex}
-\input{cv/selected-academic-publications-soft.tex}
-\input{cv/selected-presentations.tex}
-%\input{cv/honors_and_awards.tex}
-\input{cv/committees.tex}
-%\input{cv/other_academic_publications.tex}
-%\input{cv/experience.tex}
-%\input{cv/extracurricular.tex}
-%\input{cv/writing.tex}
+\input{contents/education.tex}
+\input{contents/experience-soft.tex}
+\input{contents/projects-soft.tex}
+\input{contents/skills.tex}
+\input{contents/selected-academic-publications-soft.tex}
+\input{contents/selected-presentations.tex}
+%\input{contents/honors_and_awards.tex}
+\input{contents/committees.tex}
+%\input{contents/other_academic_publications.tex}
+%\input{contents/experience.tex}
+%\input{contents/extracurricular.tex}
+%\input{contents/writing.tex}
 
 
 %-------------------------------------------------------------------------------
