--- a/khl/cv/cv-gov.tex
+++ b/khl/cv/cv-gov.tex
@@ -64,7 +64,7 @@
 \position{Phd Candidate}
 %\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
 
-\mobile{(+31) 6-2184-1392}
+\mobile{(+852) 9171-2155}
 \email{adrian.k.h.lai@gmail.com}
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com}
@@ -107,17 +107,17 @@
   {\thepage}
 
 \vspace{1em}
-Enthusiastic researcher and software developer with a strong background in physics and quantitative social science. Experienced in game development, conducting innovative research, and solving complex problems.
+Enthusiastic researcher and software developer with a strong background in both physics and social science, seeking opportunities to leverage my skills and expertise in scientific policy, data-oriented research and software engineering to support the development of policies in Hong Kong.
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{contents/education.tex}
-\input{contents/experience.tex}
-\input{contents/projects.tex}
+\input{contents/experience-soft.tex}
+\input{contents/projects-soft.tex}
 \input{contents/skills.tex}
-\input{contents/selected-academic-publications.tex}
+\input{contents/selected-academic-publications-soft.tex}
 \input{contents/selected-presentations.tex}
 %\input{contents/honors_and_awards.tex}
 \input{contents/committees.tex}
