--- a/khl/cv/contents/education.tex
+++ b/khl/cv/contents/education.tex
@@ -11,13 +11,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {Ph.D. in Quantitative Science Studies} % Degree
+    {Ph.D. in Social and Behavioural Sciences} % Degree
     {Leiden University} % Institution
     {Leiden, The Netherlands} % Location
     {Jun. 2019 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Expected graduation: early 2024}
+        \item {Expected graduation: 2024}
       \end{cvitems}
     }
 
