--- a/khl/cv/contents/experience-soft.tex
+++ b/khl/cv/contents/experience-soft.tex
@@ -17,7 +17,7 @@
     {Mar. 2021 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
+        \item{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated social mechanisms and relativistic physics}
         \item{Implemented a RESTful server-client architecture and user-friendly graphical interfaces for PC and Android}
         \item{Created utility-based AI to determine actions from complex observations}
         \item{Managed a codebase with 60K+ lines of code via Git}
