--- a/khl/cv/contents/my-representative-publication.bib
+++ b/khl/cv/contents/my-representative-publication.bib
@@ -69,5 +69,5 @@
   publisher    = {Zenodo},
   doi          = {10.5281/zenodo.8140436},
   url          = {https://doi.org/10.5281/zenodo.8140436},
-  howpublished = {Accepted by the 18th Social Simulation Conference, https://doi.org/10.5281/zenodo.8140436},
+  booktitle = {Advances in Social Simulation - Proceedings of the 18th Social Simulation Conference, European Social Simulation Association},
 }
