--- a/khl/cv/contents/selected-academic-publications-soft.tex
+++ b/khl/cv/contents/selected-academic-publications-soft.tex
@@ -35,25 +35,11 @@
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{Conference Proceedings}
-
 \begin{refsection}
 	\nocite{lai2022simulation}
     \nocite{lai2021issi}
-
-	\printbibliography[
-	heading=none, 
-	sorting=ydnt
-	]
-\end{refsection}
-
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsubsection{Journal Articles}
-
-\begin{refsection}
-	\nocite{lai2018constraining}
+    \nocite{lai_kwun_hang_2023_8140436}
+    \nocite{lai2018constraining}
 	\nocite{lai2018discovering}
 
 	\printbibliography[
