--- a/khl/cv/contents/experience-soft.tex
+++ b/khl/cv/contents/experience-soft.tex
@@ -34,6 +34,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item{Collaborated with an international team spanning 5 countries}
+        \item{Developed agent-based models to study the behavior of scholars}
         \item{Worked with software developers to build a data platform for confidential funding data}
         \item{Conducted data-oriented research on funding allocation dynamics}
         \item{Participated in the Research Software Community Leiden}
@@ -53,12 +54,8 @@
         \item{Contributed to a C codebase for model implementation}
         \item{Ran simulations on supercomputer clusters}
         \item{Conducted Bayesian statistical analysis on simulated and real data using Python}
-        \item{Published 2 papers in reputable journals}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-%  \cventry
 %    {Majorana Stellar Representation of Quantum Entanglement} % Research project
 %    {Undergraduate Research Project} % Research organization
 %    {Hong Kong, China} % Location
