--- a/khl/cv/contents/my-representative-publication.bib
+++ b/khl/cv/contents/my-representative-publication.bib
@@ -23,7 +23,7 @@
 }
 
 @inproceedings{lai2021issi,
-  author    = {Lai Kwun Hang and
+  author    = {Lai, Kwun Hang and
                Vincent A. Traag and
                Ludo Waltman},
   editor    = {Wolfgang Glanzel and
@@ -41,7 +41,7 @@
 }
 
 @software{relativitization,
-  author       = {Lai Kwun Hang},
+  author       = {Lai, Kwun Hang},
   title        = {Relativitization},
   year         = 2022,
   doi          = {10.5281/zenodo.6120765},
@@ -62,7 +62,7 @@
 }
 
 @misc{lai_kwun_hang_2023_8140436,
-  author       = {Lai Kwun Hang},
+  author       = {Lai, Kwun Hang},
   title        = {Interstellar knowledge dynamics},
   month        = jul,
   year         = 2023,
