--- a/khl/cv/contents/projects-soft.tex
+++ b/khl/cv/contents/projects-soft.tex
@@ -17,8 +17,8 @@
     {Jun. 2023 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item{Analyzed the diffusion of FAIR principles in academic publications}
-        \item{Investigated the references to FAIR principles in policy documents}
+        \item{Analyzed the diffusion of FAIR (findability, accessibility, interoperability, and reusability) principles in academic publications}
+        \item{Investigated references to FAIR principles in policy documents}
       \end{cvitems}
     }
 
