--- a/khl/cv/cv-gov.tex
+++ b/khl/cv/cv-gov.tex
@@ -107,7 +107,7 @@
   {\thepage}
 
 \vspace{1em}
-Enthusiastic researcher and software developer with a strong background in both physics and social science, seeking opportunities to leverage my skills and expertise in scientific policy, data-oriented research and software engineering to support the development of policies in Hong Kong.
+Enthusiastic researcher and software developer with a strong background in both physics and social science, seeking opportunities to leverage my skills and expertise in scientific policy, data-oriented research and software engineering to support policy development in Hong Kong.
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
@@ -116,7 +116,7 @@ Enthusiastic researcher and software developer with a strong background in both 
 \input{contents/education.tex}
 \input{contents/experience-soft.tex}
 \input{contents/projects-soft.tex}
-\input{contents/skills.tex}
+\input{contents/skills-soft.tex}
 \input{contents/selected-academic-publications-soft.tex}
 \input{contents/selected-presentations.tex}
 %\input{contents/honors_and_awards.tex}
