Update cv and cover letter

--- a/khl/cv/contents/projects-soft.tex
+++ b/khl/cv/contents/projects-soft.tex
@@ -46,8 +46,7 @@
         \item{Repository: \href{https://github.com/adriankhl/relativitization}{\underline{\smash{github.com/adriankhl/relativitization}}}}
         \item{Developed a parallel agent-based computational framework utilizing coroutines}
         \item{Designed efficient algorithms and data structures for relativistic spacetime calculations}
-        \item{Automated testing using JUnit and GitHub Actions}
-        \item{Authored comprehensive documentation}
+        \item{Authored comprehensive documentation and tests}
       \end{cvitems}
     }
 
