--- a/khl/cv/contents/selected-presentations.tex
+++ b/khl/cv/contents/selected-presentations.tex
@@ -11,13 +11,25 @@
 
 %---------------------------------------------------------
   \cventry
+    {Interstellar knowledge dynamics} % Role
+    {Social Simulation Conference} % Event
+    {Glasgow, United Kingdom} % Location
+    {2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {Discussed knowledge diffusion in a society with huge time delays}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Interstellar social simulation framework and game development in Kotlin} % Role
     {KotlinConf} % Event
     {Amsterdam, the Netherlands} % Location
     {2023} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Discussed Kotlin-specific aspects of Relativitization}
+        \item {Shared my experience in developing software with Kotlin}
       \end{cvitems}
     }
 
@@ -45,17 +57,17 @@
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {On social simulation in 4D relativistic spacetime} % Role
-    {Social Simulation Conference} % Event
-    {Milan, Italy} % Location
-    {2022} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {Explained the mathematical and algorithmic details of my simulation framework}
-      \end{cvitems}
-    }
+%%---------------------------------------------------------
+%  \cventry
+%    {On social simulation in 4D relativistic spacetime} % Role
+%    {Social Simulation Conference} % Event
+%    {Milan, Italy} % Location
+%    {2022} % Date(s)
+%    {
+%      \begin{cvitems} % Description(s)
+%        \item {Explained the mathematical and algorithmic details of my simulation framework}
+%      \end{cvitems}
+%    }
 
 %%---------------------------------------------------------
 %  \cventry
