--- a/khl/cv/contents/skills-soft.tex
+++ b/khl/cv/contents/skills-soft.tex
@@ -21,13 +21,8 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Frameworks and Libraries} % Category
-    {Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Tools} % Category
-    {Git, Linux, Gradle, Vim, Android Studio, IntelliJ} % Skills
+    {Tools and Libraries} % Category
+    {Git, Linux, kotlinx.coroutine, pandas, NumPy, Matplotlib} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
