--- a/khl/cv/cv-gov.tex
+++ b/khl/cv/cv-gov.tex
@@ -107,7 +107,7 @@
   {\thepage}
 
 \vspace{1em}
-Enthusiastic researcher and software developer with a strong background in both physics and social science, seeking opportunities to leverage my skills and expertise in scientific policy, data-oriented research and software engineering to support policy development in Hong Kong.
+Enthusiastic researcher and software developer with a strong background in both physics and social science. Experienced in science policy, data-oriented research, and software engineering. Dedicated to leveraging my skills and expertise to support policy development in Hong Kong.
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
