--- a/khl/resume/resume-data-hk.tex
+++ b/khl/resume/resume-data-hk.tex
@@ -116,7 +116,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Lai Kwun Hang (Adrian)} \\ \vspace{1pt}
-    \small +31-6-2184-1392 $|$ \href{mailto:adrian.k.h.lai@gmail.com}{\underline{adrian.k.h.lai@gmail.com}} $|$ 
+    \small +852-9171-2155 $|$ \href{mailto:adrian.k.h.lai@gmail.com}{\underline{adrian.k.h.lai@gmail.com}} $|$ 
     \href{https://www.linkedin.com/in/adrian-k-h-lai}{\underline{linkedin.com/in/adrian-k-h-lai}} $|$
     \href{https://github.com/Adriankhl}{\underline{github.com/Adriankhl}}
 \end{center}
