--- a/khl/coverletter/coverletter-cuhk.tex
+++ b/khl/coverletter/coverletter-cuhk.tex
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Center for Digital Scholarship, Leiden University}
-  {Leiden}
+  {The Chinese University of Hong Kong Library}
+  {Hong Kong}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Data Management Expert with a heart for science}
+\lettertitle{Job Application for Assistant Librarian I (carrying the job title of ‘Open Science Librarian’) (240000AN)}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,7 +122,11 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the “Data Management Expert with a heart for science” position at the Center for Digital Scholarship (CDS). As a Ph.D. candidate at Leiden University, I am eager to contribute my unique blend of expertise to the data management community at Leiden.
+I am writing to express my strong interest in the “Assistant Librarian I (carrying the job title of ‘Open Science Librarian’)” position at the Chinese University of Hong Kong (CUHK) Library. In fact, I decided to do my PhD because I am motivated to investigate ways to improve the academic system in Hong Kong. As I am finishing my PhD study, I am excited to see this opportunity to apply my expertise to promote open science practices in my home city.
+
+My current insititute, the Centre for Science and Technology Studies (CWTS) at Leiden University, has been actively participating in the open science movement for many years. CWTS experts have conducted many research regarding open science, and some are involved in open science projects such as ``Plan S'' and UNESCO open science working groups. As a result, I have extensive exposure to different aspects of open science. Also, if I am offered this position, I can act as a bridge between CUHK library, CWTS and possibly other open science organizations.
+
+While my major research focus is mostly about modeling academic system instead of open science, I have been actively participating in different open science related projects or events. For example, CWTS is currently moving towards open research information, utilizing tools such as OpenAlex, and I am one of the member of the working group. Last year, we organized
 
 My academic journey, spanning physics, mathematics, and social science, has equipped me with a distinctive advantage - I possess a deep understanding of data in both natural and social sciences. This interdisciplinary background positions me as a valuable connector capable of facilitating communication and feedback exchange between different departments within Leiden University.
 
