--- a/khl/cv/contents/experience-soft.tex
+++ b/khl/cv/contents/experience-soft.tex
@@ -37,7 +37,7 @@
         \item{Developed agent-based models to study the behavior of scholars}
         \item{Worked with software developers to build a data platform for confidential funding data}
         \item{Conducted data-oriented research on funding allocation dynamics}
-        \item{Participated in the Research Software Community Leiden}
+        \item{Participated in the Research Software Community Leiden and the Open Research Information Group}
         \item{Organized training workshops on open science and open source practices}
       \end{cvitems}
     }
