--- a/khl/cv/contents/experience.tex
+++ b/khl/cv/contents/experience.tex
@@ -36,7 +36,7 @@
         \item{Collaborated with an international team spanning 5 countries}
         \item{Developed agent-based models in Java/Python/Julia to study the behavior of funding applicants}
         \item{Conducted data analysis using Python and SQL, powered by AWS, PostgreSQL, and MSSQL}
-        \item{Participated in the Research Software Community Leiden}
+        \item{Participated in the Research Software Community Leiden and Open Research Information Group}
         \item{Organized training workshops on open science and open source practices}
       \end{cvitems}
     }
