--- a/khl/cv/contents/projects-soft.tex
+++ b/khl/cv/contents/projects-soft.tex
@@ -14,7 +14,7 @@
     {\emph{Python, SQL}} % Research project
     {FAIR text-mining and citation analysis} % Research organization
     {} % Location
-    {Jun. 2023 - present} % Date(s)
+    {Jun. 2023 - Jan. 2024} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item{Analyzed the diffusion of FAIR (findability, accessibility, interoperability, and reusability) principles in academic publications}
