--- a/khl/coverletter/coverletter-cuhk.tex
+++ b/khl/coverletter/coverletter-cuhk.tex
@@ -122,23 +122,17 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the “Assistant Librarian I (carrying the job title of ‘Open Science Librarian’)” position at the Chinese University of Hong Kong (CUHK) Library. In fact, I decided to do my PhD because I am motivated to investigate ways to improve the academic system in Hong Kong. As I am finishing my PhD study, I am excited to see this opportunity to apply my expertise to promote open science practices in my home city.
+I am writing to express my strong interest in the "Assistant Librarian I (carrying the job title of 'Open Science Librarian')" position at the Chinese University of Hong Kong (CUHK) Library. I am particularly excited about this opportunity because it aligns perfectly with my desire to contribute to the advancement of open science practices in my alma mater and my home country.
 
-My current insititute, the Centre for Science and Technology Studies (CWTS) at Leiden University, has been actively participating in the open science movement for many years. CWTS experts have conducted many research regarding open science, and some are involved in open science projects such as ``Plan S'' and UNESCO open science working groups. As a result, I have extensive exposure to different aspects of open science. Also, if I am offered this position, I can act as a bridge between CUHK library, CWTS and possibly other open science organizations.
+My current institute, the Centre for Science and Technology Studies (CWTS) at Leiden University, is renowned for its expertise in science studies research and has been at the forefront of open science initiatives, such as ``Plan S'' and UNESCO open science working groups. Through my association with CWTS, I have gained extensive exposure to various facets of open science. Moreover, CWTS has strong connections with science policy scholars in mainland China. I am happy to serve as a bridge between CUHK Library, CWTS, Chinese scholars, and other open science organizations.
 
-While my major research focus is mostly about modeling academic system instead of open science, I have been actively participating in different open science related projects or events. For example, CWTS is currently moving towards open research information, utilizing tools such as OpenAlex, and I am one of the member of the working group. Last year, we organized
+Although my primary research focus has been on modeling the academic system rather than open science specifically, I have actively participated in several open science-related projects and events. For instance, I have been part of the CWTS working group responsible for the transition to open research information, utilizing databases like OpenAlex. Additionally, I played a key role in testing and managing the open access and open peer review platform, Orvium, for the International Conference on Science, Technology, and Innovation Indicators in 2023. Furthermore, I have contributed to open source software projects and shared my experiences in open source research software at various conferences and meetings. These experiences underscore my commitment to practicing and promoting open science.
 
-My academic journey, spanning physics, mathematics, and social science, has equipped me with a distinctive advantage - I possess a deep understanding of data in both natural and social sciences. This interdisciplinary background positions me as a valuable connector capable of facilitating communication and feedback exchange between different departments within Leiden University.
+My interdisciplinary academic background in physics, mathematics, social science, and software development equips me with a broad understanding of the needs of academic staff across diverse disciplines. Furthermore, I have successfully organized events and workshops involving administrative and library staff at Leiden University, demonstrating my ability to collaborate effectively with different stakeholders. Additionally, my fluency in English, Putonghua, and Cantonese enables me to work seamlessly with local, mainland Chinese, and international individuals.
 
-My current institute, the Centre for Science and Technology Studies (CWTS), is deeply engaged in the realm of open science and FAIR data. I have been working within a team, including our data steward, to understand the academic and policy landscape of FAIR data. Moreover, in one of our focal area “Information \& Openness”, our team is planning to engage with the Research Data Alliance (RDA) working groups. Given that this position also entails participation in data management networks such as RDA, I am well-prepared to coordinate these efforts to avoid duplication of work.
+One of my key strengths lies in my strong IT skills. I possess extensive experience in analyzing scientific and social science data, and I have actively contributed to various open source software projects using multiple programming languages. Furthermore, I have developed a simulation game from scratch, which has allowed me to explore the potential of game development in promoting open science and citizen science. An example of this is the ``Software Horror Escape Room'' game developed by the library staff in the Netherlands regarding the publication of academic software. I believe my IT skills could be valuable assets in providing digital services, improving open science infrastructure and engaging with the academic community.
 
-I am passionate about knowledge sharing and have presented my research at many international conferences. Additionally, I have organized workshops on technical topics and open science within my research group. As some of these training materials are now offered by CDS and data stewards, I am excited to continue contributing to training initiatives in this role.
-
-Furthermore, I possess strong software engineering capabilities. My proficiency allows me to explore the possibility of working with the ICT department to offer technical services, such as data storage solutions, which align with practices at other Dutch universities like TU Delft and Wageningen University \& Research. Also, I have been keen on contributing to the Research Software Community Leiden of CDS.
-
-Since I had to leave the country during the pandemic, I didn’t have the chance to practice my Dutch. I am eager to improve my Dutch level in the future.
-
-Thank you for considering my application. I look forward to the opportunity to discuss my qualifications further in an interview.
+Although I may not have professional experience as a librarian, my unique combination of experiences and skills sets me apart for this position. I am eager to learn any additional traditional librarian skills that may be required. Thank you for considering my application. Currently, I am located in Hong Kong until at least early April. I look forward to the opportunity to discuss my qualifications further.
 
 %\lettersection{Why Me?}
 
